0.7 update version