@@ -4,6 +4,7 @@
  */
 package me.stutiguias.dao.mysql;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.Driver;
 import java.sql.DriverManager;
@@ -34,17 +35,23 @@ public class McpkConnectionPool {
     private String password;
     
     public McpkConnectionPool(String driverName, String url, String username, String password) throws InstantiationException, IllegalAccessException, ClassNotFoundException, SQLException {
-        Driver driver = (Driver) Class.forName(driverName).newInstance();
-        McpkDriver jDriver = new McpkDriver(driver);
-        DriverManager.registerDriver(jDriver);
-        ready = true;
-        this.url = url;
-        this.username = username;
-        this.password = password;
-        connections = new ArrayList<McpkConnection>(poolsize);
-        reaper = new ConnectionReaper();
-        reaper.start();
-        instance = this;
+
+        try {
+            Driver driver = (Driver) Class.forName(driverName).getDeclaredConstructor().newInstance();
+            McpkDriver jDriver = new McpkDriver(driver);
+            DriverManager.registerDriver(jDriver);
+            ready = true;
+            this.url = url;
+            this.username = username;
+            this.password = password;
+            connections = new ArrayList<McpkConnection>(poolsize);
+            reaper = new ConnectionReaper();
+            reaper.start();
+            instance = this;
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new RuntimeException(e);
+        }
+
     }
     
     public boolean isReady(){
